Got rid of a bunch of bootstrap that wasn't being used Fixed the z-index of the config menu

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ div#options-menu {
   position: absolute;
   top: 8px;
   right: 8px;
+  z-index: 3;
 }
 div#options-menu>svg {
   width: 25px;
